--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -2,23 +2,26 @@ cmake_minimum_required(VERSION 3.8.2...3.20)
 # Automatically create moc files
 set(CMAKE_AUTOMOC ON)
 
-find_package(Qt5Core 5.15 REQUIRED)
-find_package(Qt5Gui REQUIRED)
-find_package(Qt5Qml REQUIRED)
-find_package(Qt5Quick REQUIRED)
-find_package(Qt5QuickControls2 REQUIRED)
-find_package(Qt5Widgets REQUIRED)
-find_package(Qt5Xml REQUIRED)
-find_package(Qt5Svg REQUIRED)
-if(ANDROID)
-  find_package(Qt5AndroidExtras REQUIRED)
-endif()
+set(QT_MIN_VERSION 6.4.0)
+find_package(Qt6 ${QT_MIN_VERSION} REQUIRED)
+find_package(Qt6Core REQUIRED)
+find_package(Qt6Gui REQUIRED)
+find_package(Qt6Qml REQUIRED)
+find_package(Qt6Quick REQUIRED)
+find_package(Qt6QuickControls2 REQUIRED)
+find_package(Qt6Widgets REQUIRED)
+find_package(Qt6Xml REQUIRED)
+find_package(Qt6Svg REQUIRED)
 
 file(GLOB QML_JS_FILES *.qml *.js)
 file(GLOB APP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qml *.js *.json)
 
-add_subdirectory(controls2_515)
-qt5_add_resources(noson-gui-resources noson_controls2_515.qrc)
+if(Qt6Core_VERSION VERSION_LESS 6.99.0)
+  add_subdirectory(controls2_640)
+  qt6_add_resources(noson-gui-resources noson_controls2_640.qrc)
+else()
+  message(FATAL_ERROR "Invalid Qt6Core version")
+endif()
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 11)
@@ -65,10 +68,7 @@ else()
   add_executable(noson-gui ${noson-gui_SOURCES} ${noson-gui_HEADERS} ${noson-gui-resources})
 endif()
 
-target_link_libraries(noson-gui Qt5::Gui Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Widgets Qt5::Xml Qt5::Svg)
-if(ANDROID)
-  target_link_libraries(noson-gui Qt5::AndroidExtras android log)
-endif()
+target_link_libraries(noson-gui Qt6::Gui Qt6::Qml Qt6::Quick Qt6::QuickControls2 Qt6::Widgets Qt6::Xml Qt6::Svg)
 
 if(QT_STATICPLUGIN)
   add_definitions(-DQT_STATICPLUGIN)
