clone qml resources for qt version 5.15

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -15,8 +15,13 @@ find_package(Qt5Svg REQUIRED)
 file(GLOB QML_JS_FILES *.qml *.js)
 file(GLOB APP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qml *.js *.json)
 
-add_subdirectory(controls2_509)
-qt5_add_resources(noson-gui-resources noson_controls2_509.qrc)
+if(Qt5Core_VERSION VERSION_LESS 5.15.0)
+  add_subdirectory(controls2_509)
+  qt5_add_resources(noson-gui-resources noson_controls2_509.qrc)
+else()
+  add_subdirectory(controls2_515)
+  qt5_add_resources(noson-gui-resources noson_controls2_515.qrc)
+endif()
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 11)
