--- a/.github/workflows/build-ubuntu-latest.yml
+++ b/.github/workflows/build-ubuntu-latest.yml
@@ -1,4 +1,4 @@
-name: build ubuntu-latest
+name: build ubuntu latest
 
 on:
   pull_request:
@@ -15,18 +15,41 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: "sudo apt-get update && sudo apt-get install libflac-dev libflac++-dev libpulse-dev
-              qtbase5-dev qttools5-dev qttools5-dev-tools qtdeclarative5-dev
-              qtdeclarative5-dev-tools qtquickcontrols2-5-dev libqt5svg5-dev
-              qml-module-qt-labs-settings qml-module-qtgraphicaleffects
-              qml-module-qtqml-models2 qml-module-qtquick2
-              qml-module-qtquick-controls2 qml-module-qtquick-layouts
-              qml-module-qtquick-particles2 qml-module-qtquick-templates2
-              qml-module-qtquick-window2 libqt5dbus5 libqt5svg5
-              zlib1g-dev libssl-dev libpulse-dev libflac-dev libflac++-dev
-              libdbus-1-dev"
+        run: "sudo apt-get update && sudo apt-get install
+              libflac-dev libflac++-dev libpulse-dev zlib1g-dev libssl-dev libdbus-1-dev"
+      - name: Cache Qt
+        id: cache-qt
+        uses: actions/cache@v1
+        with:
+          path: ../Qt/5.15.2/gcc_64
+          key: ${{ runner.os }}-QtCache-5152-gcc_64
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2
+        with:
+          version: '5.15.2'
+          host: 'linux'
+          target: 'desktop'
+          modules: ''
+          install-deps: 'true'
+          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+      - name: Dump Qt DIR
+        run:  echo ${Qt5_DIR}
+      - name: Init submodules
+        run: git submodule init && git submodule update
       - name: Configure build
         run: "cmake -B build
+                    -DCMAKE_PREFIX_PATH=${Qt5_DIR}
+                    -DQt5_DIR=${Qt5_DIR}/lib/cmake/Qt5
+                    -DQt5Core_DIR=${Qt5_DIR}/lib/cmake/Qt5Core
+                    -DQt5Gui_DIR=${Qt5_DIR}/lib/cmake/Qt5Gui
+                    -DQt5Qml_DIR=${Qt5_DIR}/lib/cmake/Qt5Qml
+                    -DQt5Network_DIR=${Qt5_DIR}/lib/cmake/Qt5Network
+                    -DQt5Quick_DIR=${Qt5_DIR}/lib/cmake/Qt5Quick
+                    -DQt5QuickControls2_DIR=${Qt5_DIR}/lib/cmake/Qt5QuickControls2
+                    -DQt5Xml_DIR=${Qt5_DIR}/lib/cmake/Qt5Xml
+                    -DQt5Svg_DIR=${Qt5_DIR}/lib/cmake/Qt5Svg
+                    -DQt5Widgets_DIR=${Qt5_DIR}/lib/cmake/Qt5Widgets
+                    -DQt5QmlModels_DIR=${Qt5_DIR}/lib/cmake/Qt5QmlModels
                     -Wno-dev"
       - name: Build
         run:  cmake --build build
