--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2021-12-21" version="4.5.0"/>
     <release date="2021-12-12" version="4.4.11"/>
     <release date="2021-10-30" version="4.4.10"/>
     <release date="2021-03-20" version="4.4.9"/>
