--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2022-02-13" version="5.0.2"/>
     <release date="2022-02-12" version="5.0.1"/>
     <release date="2022-01-11" version="4.5.2"/>
     <release date="2022-01-07" version="4.5.1"/>
