check for an instance of AppImage

--- a/noson-app.in
+++ b/noson-app.in
@@ -1,7 +1,13 @@
 #!/bin/sh
 
+MYROOT=''
+# Check for an instance of AppImage
+if [ -n "$APPDIR" ] && [ -d "$APPDIR@PLUGINS_DIR@" ]; then
+  MYROOT="$APPDIR"
+fi
+
 # Launch the CLI else the GUI
-[ "--cli" = "$1" ] && shift && exec @NOSON_CLI@ $@
+[ "--cli" = "$1" ] && shift && exec "$MYROOT@NOSON_CLI@" $@
 
 # Migrate the GUI settings
 if [ -f "$HOME/.config/janbar/noson.conf" ]; then
@@ -11,5 +17,5 @@ if [ -f "$HOME/.config/janbar/noson.conf" ]; then
 fi
 
 # Launch the GUI
-export QML2_IMPORT_PATH=@PLUGINS_DIR@
-exec @NOSON_GUI@ $@
+export QML2_IMPORT_PATH="$MYROOT@PLUGINS_DIR@"
+exec "$MYROOT@NOSON_GUI@" $@
