--- a/appimage/builder_ubuntu_18.04.yml
+++ b/appimage/builder_ubuntu_18.04.yml
@@ -5,7 +5,7 @@ AppDir:
     id: io.github.janbar.noson
     name: noson
     icon: noson
-    version: latest
+    version: latest-ubuntu-bionic
     exec: usr/bin/noson-app
     exec_args: $@
   apt:
@@ -96,24 +96,8 @@ AppDir:
       - usr/share/doc/*/NEWS.*
       - usr/share/doc/*/TODO.*
   test:
-    fedora:
-      image: appimagecrafters/tests-env:fedora-30
-      command: ./AppRun
-      use_host_x: true
-    debian:
-      image: appimagecrafters/tests-env:debian-stable
-      command: ./AppRun
-      use_host_x: true
-    arch:
-      image: appimagecrafters/tests-env:archlinux-latest
-      command: ./AppRun
-      use_host_x: true
-    centos:
-      image: appimagecrafters/tests-env:centos-7
-      command: ./AppRun
-      use_host_x: true
     ubuntu:
-      image: appimagecrafters/tests-env:ubuntu-xenial
+      image: appimagecrafters/tests-env:ubuntu-bionic
       command: ./AppRun
       use_host_x: true
 AppImage:
