--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2022-02-20" version="5.1.0"/>
     <release date="2022-02-20" version="5.0.8"/>
     <release date="2022-02-18" version="5.0.7"/>
     <release date="2022-02-15" version="5.0.6"/>
