workflows: macos artifact name is name

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -118,7 +118,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ matrix.config.artifact }}
+        name: ${{ matrix.config.name }}
         path: ${{ github.workspace }}/build/noson-MacOSX_*.tar.gz
         retention-days: 5
 
