debian: upgrade to debhelper-compat 12
We use the "new" recommended way to specify compatibility level by
adding a Build-Depends on debhelper-compat package:

  https://manpages.debian.org/testing/debhelper/debhelper.7.en.html#COMPATIBILITY_LEVELS

Version 12 is available from Debian 10 and Ubuntu 20.04; the previous
version 9 is deprecated.

This brings the ability to build the Debian package in parallel (e.g.
dpkg-buildpackage -j4) in particular.

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: janbar <jlbarriere68@gmail.com>
 Build-Depends: cmake,
                git,
-               debhelper (>= 9.0.0),
+               debhelper-compat (= 12),
                qtbase5-dev (>= 5.9.1),
                qttools5-dev,
                qttools5-dev-tools,
