add backend features to manage radio stations

--- a/backend/NosonApp/CMakeLists.txt
+++ b/backend/NosonApp/CMakeLists.txt
@@ -65,6 +65,7 @@ set(
     alarmsmodel.cpp
     future.cpp
     librarymodel.cpp
+    radiosmodel.cpp
 )
 
 set(
@@ -92,6 +93,7 @@ set(
     alarmsmodel.h
     future.h
     librarymodel.h
+    radiosmodel.h
 )
 
 if(HAVE_DBUS)
