--- a/.github/workflows/appimage_ubuntu_18.04.yml
+++ b/.github/workflows/appimage_ubuntu_18.04.yml
@@ -30,10 +30,10 @@ jobs:
         run: cmake -B build -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr
 
       - name: Build
-        run: cd build && make -j`nproc` install DESTDIR=AppDir && ls -l /github/workspace/AppDir/usr/bin/
+        run: cd build && make -j`nproc` install DESTDIR=AppDir
 
       - name: Build AppImage
-        uses: AppImageCrafters/build-appimage-action@master
+        uses: AppImageCrafters/build-appimage-action@fe2205a4d6056be47051f7b1b3811106e9814910
         env:
           UPDATE_INFO: gh-releases-zsync|AppImageCrafters|noson-app|latest|*x86_64.AppImage.zsync
         with:
