--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2023-01-27" version="5.3.3"/>
     <release date="2022-09-08" version="5.3.2"/>
     <release date="2022-04-26" version="5.2.2"/>
     <release date="2022-03-04" version="5.2.1"/>
