Revert "debian: upgrade to debhelper-compat 12"
This reverts commit 4926fc79b2931657c7c33846eb0c56908fb406fa.

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: janbar <jlbarriere68@gmail.com>
 Build-Depends: cmake,
                git,
-               debhelper-compat (= 12),
+               debhelper (>= 9.0.0),
                qtbase5-dev (>= 5.9.1),
                qttools5-dev,
                qttools5-dev-tools,
