--- a/.github/workflows/build-android-ndk21.yml
+++ b/.github/workflows/build-android-ndk21.yml
@@ -1,23 +1,23 @@
 name: build android ndk21
-
 on:
   pull_request:
     branches:
       - master
   push:
     branches:
-      - master
+      - build-workflows
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: zulu
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
       - name: Run sdkmanager update
@@ -26,23 +26,18 @@ jobs:
         run:  ${ANDROID_HOME}/tools/bin/sdkmanager --install "platform-tools" "platforms;android-24" "build-tools;29.0.2" "ndk;21.4.7075529"
       - name: Dump Android NDK
         run: "ls ${ANDROID_HOME}/ndk"
-      - name: Cache Qt
-        id: cache-qt
-        uses: actions/cache@v1
-        with:
-          path: ../Qt/5.15.2/android
-          key: ${{ runner.os }}-QtCache-5152-android
+
       - name: Install Qt
-        uses: jurplel/install-qt-action@v2
+        uses: jurplel/install-qt-action@v3
         with:
           version: '5.15.2'
           host: 'linux'
           target: 'android'
           modules: android
           install-deps: 'true'
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - name: Dump Qt DIR
         run:  echo ${Qt5_DIR}
+
       - name: Init submodules
         run: git submodule init && git submodule update
       - name: Configure manifest
@@ -79,3 +74,10 @@ jobs:
                     -Wno-dev"
       - name: Build
         run:  cmake --build build
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: noson-gui-arm64-v8a-debug
+          path: ${{ github.workspace }}/build/noson-gui-arm64-v8a/build/outputs/apk/debug/noson-gui-*-debug.apk
+          retention-days: 5
