--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2023-11-26" version="5.6.2"/>
     <release date="2023-11-21" version="5.6.1"/>
     <release date="2023-09-30" version="5.6.0"/>
     <release date="2023-09-25" version="5.5.1"/>
