--- a/.github/workflows/build-android-ndk21.yml
+++ b/.github/workflows/build-android-ndk21.yml
@@ -13,19 +13,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/checkout@v3
+
+      - name: Install Java JDK for Android SDK tools
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-      - name: Run sdkmanager update
-        run:  ${ANDROID_HOME}/tools/bin/sdkmanager --update
-      - name: Install android platform, tools, ndk
-        run:  ${ANDROID_HOME}/tools/bin/sdkmanager --install "platform-tools" "platforms;android-24" "build-tools;29.0.2" "ndk;21.4.7075529"
+          distribution: zulu
+          java-version: 17
+      - name: Setup Android SDK tools
+        uses: android-actions/setup-android@v3
+        with:
+          packages: "platform-tools platforms;android-24 build-tools;21.0.0 ndk;21.4.7075529"
       - name: Dump Android NDK
         run: "ls ${ANDROID_HOME}/ndk"
+
+      - name: Install Java JDK for Android Qt build
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Cache Qt
         id: cache-qt
         uses: actions/cache@v1
@@ -43,7 +48,8 @@ jobs:
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - name: Dump Qt DIR
         run:  echo ${Qt5_DIR}
-      - name: Init submodules
+
+      - name: Fetch submodules
         run: git submodule init && git submodule update
       - name: Configure manifest
         run: cp android/AndroidManifest.xml.in.ndk21 android/AndroidManifest.xml.in
@@ -60,11 +66,11 @@ jobs:
                     -DANDROID_SDK_TARGET=26
                     -DANDROID_NATIVE_API_LEVEL=24
                     -DQT_ANDROID_PLATFORM_LEVEL=24
+                    -DQT_ANDROID_SDK_BUILDTOOLS_REVISION=21.0.0
                     -DQT_ANDROID_TOOL_PREFIX=aarch64-linux-android
                     -DQT_ANDROID_SDK_ROOT=${ANDROID_SDK_ROOT}
                     -DQT_ANDROID_NDK_ROOT=${ANDROID_HOME}/ndk/21.4.7075529
                     -DQT_ANDROID_QT_ROOT=${Qt5_DIR}
-                    -DQT_ANDROID_SDK_BUILDTOOLS_REVISION=21.0.0
                     -DQt5_DIR=${Qt5_DIR}/lib/cmake/Qt5
                     -DQt5Core_DIR=${Qt5_DIR}/lib/cmake/Qt5Core
                     -DQt5Gui_DIR=${Qt5_DIR}/lib/cmake/Qt5Gui
