--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2024-02-15" version="5.6.5"/>
     <release date="2023-12-19" version="5.6.4"/>
     <release date="2023-11-27" version="5.6.3"/>
     <release date="2023-11-26" version="5.6.2"/>
