try to fix macosx worker build using version 12 intel

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -15,7 +15,7 @@ jobs:
         config:
         - {
             name: "macOS-10.13-x64", artifact: "macOS-10.13-x64.zip",
-            os: macos-latest
+            os: macos-12
           }
     runs-on: ${{ matrix.config.os }}
 
