android: upgrade build

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -11,6 +11,9 @@ find_package(Qt5QuickControls2 REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Xml REQUIRED)
 find_package(Qt5Svg REQUIRED)
+if(ANDROID)
+  find_package(Qt5AndroidExtras REQUIRED)
+endif()
 
 file(GLOB QML_JS_FILES *.qml *.js)
 file(GLOB APP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qml *.js *.json)
@@ -65,10 +68,13 @@ if(ANDROID)
 elseif(MSVC)
   add_executable(noson-gui WIN32 ${noson-gui_SOURCES} ${noson-gui_HEADERS} ${noson-gui-resources})
 else()
-   add_executable(noson-gui ${noson-gui_SOURCES} ${noson-gui_HEADERS} ${noson-gui-resources})
+  add_executable(noson-gui ${noson-gui_SOURCES} ${noson-gui_HEADERS} ${noson-gui-resources})
 endif()
 
 target_link_libraries(noson-gui Qt5::Gui Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Widgets Qt5::Xml Qt5::Svg)
+if(ANDROID)
+  target_link_libraries(noson-gui Qt5::AndroidExtras android log)
+endif()
 
 if(QT_STATICPLUGIN)
   add_definitions(-DQT_STATICPLUGIN)
