link static with local dependencies

--- a/backend/lib/CMakeLists.txt
+++ b/backend/lib/CMakeLists.txt
@@ -32,7 +32,7 @@ if(NOT ZLIB_FOUND)
         ${CMAKE_CURRENT_BINARY_DIR}/zlib-build
         EXCLUDE_FROM_ALL
     )
-    set(ZLIB_LIBRARY zlib)
+    set(ZLIB_LIBRARY zlibstatic)
     set(ZLIB_INCLUDE_DIR "${zlib_BINARY_DIR}")
     set(ZLIB_LIBRARIES ${ZLIB_LIBRARY})
     set(ZLIB_INCLUDE_DIRS "${zlib_SOURCE_DIR}" "${zlib_BINARY_DIR}")
