--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.8.2)
-cmake_policy(VERSION 3.8.2)
+cmake_minimum_required(VERSION 3.8.2...3.20)
+
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 project(noson-app C CXX)
 
