cmake: fix alias for dependency zlib

--- a/backend/lib/CMakeLists.txt
+++ b/backend/lib/CMakeLists.txt
@@ -26,19 +26,20 @@ if(NOT ZLIB_FOUND)
         URL_HASH MD5=9855b6d802d7fe5b7bd5b196a2271655
         PREFIX ${CMAKE_CURRENT_BINARY_DIR}
         UPDATE_DISCONNECTED ON)
-    set(BUILD_SHARED_LIBS OFF)
     add_subdirectory(
         ${CMAKE_CURRENT_BINARY_DIR}/zlib-src
         ${CMAKE_CURRENT_BINARY_DIR}/zlib-build
         EXCLUDE_FROM_ALL
     )
     set(ZLIB_LIBRARY zlibstatic)
-    set(ZLIB_INCLUDE_DIR "${zlib_BINARY_DIR}")
     set(ZLIB_LIBRARIES ${ZLIB_LIBRARY})
+    set(ZLIB_INCLUDE_DIR "${zlib_BINARY_DIR}")
     set(ZLIB_INCLUDE_DIRS "${zlib_SOURCE_DIR}" "${zlib_BINARY_DIR}")
     set(ZLIB_FOUND ON)
+    export(TARGETS ${ZLIB_LIBRARY} FILE ZLIBTargets.cmake)
+    add_library(ZLIB::ZLIB ALIAS ${ZLIB_LIBRARY})
     message(STATUS "Build ZLIB: ${zlib_BINARY_DIR}")
-    list(APPEND noson_DEPENDENCIES zlib)
+    list(APPEND noson_DEPENDENCIES ${ZLIB_LIBRARY})
 endif()
 
 # Provides dependency openssl
