--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2025-05-07" version="5.6.9"/>
     <release date="2024-06-23" version="5.6.7"/>
     <release date="2024-03-03" version="5.6.6"/>
     <release date="2024-02-15" version="5.6.5"/>
