--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2025-05-30" version="5.6.11"/>
     <release date="2025-05-08" version="5.6.10"/>
     <release date="2025-05-07" version="5.6.9"/>
     <release date="2024-06-23" version="5.6.7"/>
