--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -2,8 +2,7 @@ cmake_minimum_required(VERSION 3.8.2...3.20)
 # Automatically create moc files
 set(CMAKE_AUTOMOC ON)
 
-set(QT_MIN_VERSION 5.9.5)
-find_package(Qt5Core ${QT_MIN_VERSION} REQUIRED)
+find_package(Qt5Core 5.15 REQUIRED)
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5Qml REQUIRED)
 find_package(Qt5Quick REQUIRED)
@@ -18,13 +17,8 @@ endif()
 file(GLOB QML_JS_FILES *.qml *.js)
 file(GLOB APP_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.qml *.js *.json)
 
-if(Qt5Core_VERSION VERSION_LESS 5.15.0)
-  add_subdirectory(controls2_509)
-  qt5_add_resources(noson-gui-resources noson_controls2_509.qrc)
-else()
-  add_subdirectory(controls2_515)
-  qt5_add_resources(noson-gui-resources noson_controls2_515.qrc)
-endif()
+add_subdirectory(controls2_515)
+qt5_add_resources(noson-gui-resources noson_controls2_515.qrc)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 11)
