--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,7 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
-    <release date="2025-06-07" version="5.6.13"/>
+    <release date="2025-06-08" version="5.6.13+1"/>
     <release date="2025-05-30" version="5.6.11"/>
     <release date="2025-05-08" version="5.6.10"/>
     <release date="2025-05-07" version="5.6.9"/>
