--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2026-02-09" version="5.6.15"/>
     <release date="2026-02-08" version="5.6.14"/>
     <release date="2025-06-08" version="5.6.13+1"/>
     <release date="2025-05-30" version="5.6.11"/>
